fix position on mobile header

--- a/static/styles/media_queries.scss
+++ b/static/styles/media_queries.scss
@@ -400,10 +400,6 @@
 	  margin-top: -5px;
   }
   
-  .homeNav {
-	  position: absolute;
-  }
-  
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
