--- a/static/styles/placelit.scss
+++ b/static/styles/placelit.scss
@@ -482,7 +482,7 @@ body { height: $full; margin:0%; padding:0; }
   @extend .btn;
   @extend .btn-primary;
   position: absolute;
-  top: 62px;
+  top: 53px;
   right: 5px;
   width: 8em;
   z-index: 198;
